--- a/webserver/static/css/style.css
+++ b/webserver/static/css/style.css
@@ -53,11 +53,11 @@ input[type="email"], input[type="number"], input[type="string"] {
 }
 
 input[type="email"]:focus, input[type="number"]:focus, input[type="string"]:focus {
-    border-color: #800080; /* Dark purple */
+    border-color: #000000; /* Dark purple */
 }
 
 button[type="submit"] {
-    background-color: #800080; /* Dark purple */
+    background-color: #000000; /* Dark purple */
     color: white;
     padding: 15px 25px;
     border: none;
